# libsnowflakeclient

./: .codecov.yml  .gitallowed  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  Jenkinsfile  README.md  README.rst  appveyor.yml  azure-pipelines.yml  cacert.pem  codecov.yml  exports.def  exports_Darwin.map  exports_Linux.map  mock_parameters.json  parameters.appveyor.json.enc  parameters.json.enc  parameters1.json  parameters_az.json.enc
cmake_test/: CMakeLists.txt  test_cmocka.cpp  test_curl.cpp
cpp/: AWSUtils.cpp  AWSUtils.hpp  AwsAttestation.cpp  AwsAttestation.hpp  AzureAttestation.cpp  AzureAttestation.hpp  CMakeLists.txt  EncryptionMaterial.hpp  EncryptionProvider.cpp  EncryptionProvider.hpp  FileCompressionType.cpp  FileCompressionType.hpp  FileMetadata.hpp  FileMetadataInitializer.cpp  FileMetadataInitializer.hpp  FilePatternInterpreter.cpp  FilePatternInterpreter.hpp  FileTransferAgent.cpp  FileTransferAgent.hpp  FileTransferExecutionResult.cpp  FileTransferExecutionResult.hpp  FileTransferResult.hpp  GcpAttestation.cpp  GcpAttestation.hpp  IFileTransferAgent.cpp  IStatement.hpp  IStatementPutGet.hpp  IStorageClient.hpp  IStorageObjectMetadata.hpp  MultiPartUploader.cpp  MultiPartUploader.hpp  OIDCAttestation.cpp  OIDCAttestation.hpp  PutGetParseResponse.cpp  PutGetParseResponse.hpp  RemoteStorageRequestOutcome.hpp  SnowflakeAzureClient.cpp  SnowflakeAzureClient.hpp  SnowflakeGCSClient.cpp  SnowflakeGCSClient.hpp  (+12 more)
cpp/crypto/: CipherContext.cpp  CipherContext.hpp  CipherStream.cpp  CipherStream.hpp  CipherStreamBuf.cpp  CipherStreamBuf.hpp  CryptoTypes.hpp  Cryptor.cpp  Cryptor.hpp  HashContext.cpp  HashContext.hpp
cpp/http/: HttpClient.cpp
cpp/jwt/: ClaimSet.cpp  ClaimSet.hpp  Header.cpp  Header.hpp  Jwt.cpp  Jwt.hpp  JwtException.hpp  Signer.cpp  Signer.hpp  Util.cpp  Util.hpp  jwtWrapper.cpp
cpp/lib/: ArrowChunkIterator.cpp  ArrowChunkIterator.hpp  AuthenticationChallengeProvider.cpp  AuthenticationChallengeProvider.hpp  AuthenticationWebBrowserRunner.cpp  AuthenticationWebBrowserRunner.hpp  Authenticator.cpp  Authenticator.hpp  AuthenticatorOAuth.cpp  AuthenticatorOAuth.hpp  BindUploader.cpp  CacheFile.cpp  CacheFile.hpp  ClientBindUploader.cpp  ClientBindUploader.hpp  ClientConfigParser.cpp  ClientQueryContextCache.cpp  ClientQueryContextCache.hpp  Column.cpp  Connection.cpp  CredentialCache.cpp  CredentialCache.hpp  DataConversion.cpp  DataConversion.hpp  Exceptions.cpp  HeaderCustomizer.cpp  HeartbeatBackground.cpp  HeartbeatBackground.hpp  IAuth.cpp  IAuthenticatorOAuth.cpp  Mutex.cpp  Mutex.hpp  PlatformDetection.cpp  QueryContextCache.cpp  QueryContextCache.hpp  ResultSet.cpp  ResultSet.hpp  ResultSetArrow.cpp  ResultSetArrow.hpp  ResultSetJson.cpp  (+14 more)
cpp/linux/: CacheFile.cpp
cpp/logger/: ISFLogger.cpp  SFAwsLogger.cpp  SFAwsLogger.hpp  SFLogger.cpp  SFLogger.hpp  SFLoggerCWrapper.cpp  SFLoggerCWrapper.h  SecretDetector.cpp  SecretDetector.hpp
cpp/platform/: FileLock.cpp  FileLock.hpp  SecureStorage.cpp  SecureStorage.hpp  SecureStorageApple.cpp  SecureStorageApple.hpp  SecureStorageImpl.cpp  SecureStorageImpl.hpp  SecureStorageLinux.cpp  SecureStorageUnSup.cpp  SecureStorageUnSup.hpp  SecureStorageWin.cpp  SecureStorageWin.hpp  secure_storage.cpp
cpp/util/: Base64.cpp  Base64.hpp  ByteArrayStreamBuf.cpp  ByteArrayStreamBuf.hpp  CompressionUtil.cpp  CompressionUtil.hpp  CurlDesc.cpp  CurlDescPool.cpp  EncryptedBuf.cpp  EncryptedBuf.hpp  LogFileUtil.cpp  Proxy.cpp  Proxy.hpp  SFURL.cpp  Sha256.cpp  Sha256.hpp  SnowflakeCommon.cpp  SnowflakeCommon.hpp  SnowflakeCppUtil.cpp  Stopwatch.cpp  StreamSplitter.cpp  StreamSplitter.hpp  ThreadPool.cpp  ThreadPool.hpp  entities.cpp
examples/: CMakeLists.txt  bind_params.c  change_current.c  check_ctypes.c  cipher_stream.cpp  connect.c  connect_negative.c  crud.c  error_handling.c  include_aws.cpp  large_result_set.c  ping_pong.c  select1.c  selectbin.c  selectbool.c  selectnull.c  selectnum.c  selecttime.c  selecttsltz.c  selecttsntz.c  selecttstz.c  selectvar.c  simple_put_get.cpp  stmt_with_bad_connect.c  timezone.c  transaction.c
examples/data/: test_put.csv
examples/utils/: example_setup.c  example_setup.h
tests/: .gitignore  CMakeLists.txt  test_adjust_fetch_data.c  test_arrow_binary.c  test_arrow_bool.c  test_arrow_column_fetch.c  test_arrow_date.c  test_arrow_float.c  test_arrow_force.c  test_arrow_number.c  test_arrow_perf_bulk_types.c  test_arrow_perf_column_evaluation.c  test_arrow_perf_string_reads_and_writes.c  test_arrow_perf_type_conversion.c  test_arrow_string.c  test_arrow_time.c  test_arrow_timestamp_ltz.c  test_arrow_timestamp_ntz.c  test_arrow_timestamp_tz.c  test_async.c  test_binary.c  test_bind_named_params.c  test_bind_params.c  test_bind_results.c  test_bool.c  test_cancel.c  test_change_current.c  test_check_ctypes.c  test_column_fetch.c  test_connect.c  test_connect_negative.c  test_cpp_select1.cpp  test_create_wif_attestation.cpp  test_crl.c  test_crl.cpp  test_crud.c  test_error_handlings.c  test_fips.cpp  test_get_describe_only_query_result.c  test_get_query_result_response.c  (+86 more)
tests/arrow/: test_arrow_binary.c  test_arrow_bool.c  test_arrow_date.c  test_arrow_float.c  test_arrow_number.c  test_arrow_string.c  test_arrow_time.c  test_arrow_timestamp_ltz.c  test_arrow_timestamp_ntz.c  test_arrow_timestamp_tz.c
tests/data/: .gitignore  decode  decode2  encode  encode2  encode64  openssl.cnf  small_file.csv  small_file.csv.bz2  small_file.csv.zst
tests/mock/: test_mock_mfa_token_caching.c  test_mock_service_name.c  test_mock_session_gone.c
tests/test_auth/: CMakeLists.txt  auth_utils.c  auth_utils.h  test_external_browser.c  test_mfa.c  test_oauth.c  test_okta.c  test_runner.c  test_wif.c
tests/test_bind_datastructures/: CMakeLists.txt
tests/test_default_auth/: CMakeLists.txt  login_response.json  test_default_auth.cpp
tests/test_oauth/: AuthenticationChallengeTestProvider.hpp  AuthenticationWebBrowserTestRunner.hpp  CMakeLists.txt  UnitOAuthBase.cpp  UnitOAuthBase.hpp  UnitOAuthClientCredentialsTest.cpp  wiremock.cpp  wiremock.hpp  (+1 more)
(+461 files in other folders)
